# write-a-book

./: .clinerules  .coverage  .coverage.Vics-MacBook-Air.local.91819.XbhLfifx  .coveragerc  .cursorrules  .env.template  .flake8  .gitignore  .markdownlint.json  .script_state  @agent_directives.md  CursorRules_Implementation_Enforcement_Strategy.txt  LICENSE  MANIFEST.in  README.md  __init__.py  agent_directives.md  conftest.py  cursor_config.py  metrics_collector.py  metrics_header.py  metrics_pandas.py  metrics_writer.py  mypy.ini  proj_status.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  serve_dashboard.py  setup.cfg  setup.py  streamlit_app.py  test.json  test_metrics.sh  test_report.md
.backup/: settings.json.1734914547  setup_test_env.sh.initial  test_template.json.1734914759
.cursor/: settings.yaml
.cursor/hooks/: pre-commit
.streamlit/: config.toml
book_editor.egg-info/: SOURCES.txt  requires.txt
config/: protected_files.txt  settings.json  thresholds.json
core_scripts/: __init__.py  config_manager.py  config_manager.sh  main.sh  metrics_collector.py  metrics_header.py  metrics_pandas.py  metrics_writer.py  monitoring_server.sh  plugin_manager.sh  progress_reporter.sh  project_customizer.sh  resource_manager.sh
dashboard/: config.py  dashboard_config.json  index.html
dashboard/static/: style.css
docs/: dashboard_architecture.md  implementation_plan.md  proj_status.md  proj_status.md-e
logs/: auto_fix.log.md  auto_fix.log.md.tmp  auto_fix.log.pylint  coverage.txt  error_patterns.txt  verify_and_fix.log.md.tmp
logs/cache/: dirs_exist  markdown  python
scripts/: .zshrc  auto_fix_code.sh  fix_zshrc.sh  github_sync.sh  run_dashboard.sh  run_tests.sh  setup.sh  setup_dashboard.sh  setup_env.sh  setup_permissions.sh  setup_test_env.sh  update_status.sh  verify_and_fix.sh
src/: __init__.py
src/book_editor/: README.md  __init__.py  main.py  types.py
src/book_editor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/book_editor/app/: __init__.py  main.py
src/book_editor/app/config/: __init__.py  settings.py
src/book_editor/app/core/: __init__.py  editor.py  preview.py
src/book_editor/config/: settings.json  settings.py
src/book_editor/core/: __init__.py  document.py  document_manager.py  editor.py  enforcement_strategy.py  template.py  template_manager.py  utils.py
src/book_editor/docs/: proj_status.md
src/book_editor/templates/: base.html
src/components/: editor.py  text_editor.py
src/data/: storage.py
src/models/: book.py
storage/: Test.json
templates/: Untitled.json  categories.json  default.json  test.json
test_env/config/: test_settings.json
test_env/data/: test_document.json
tests/: conftest.py  test_app_config.py  test_app_core.py  test_app_core_editor.py  test_app_settings.py  test_basic.py  test_book.py  test_components.py  test_config_manager.py  test_config_manager_standalone.py  test_core_editor.py  test_core_editor_extended.py  test_document.py  test_document_manager.py  test_document_manager_standalone.py  test_document_standalone.py  test_editor.py  test_editor_standalone.py  test_enforcement_strategy.py  test_enforcement_strategy_standalone.py  test_main.py  test_metrics_collector.py  test_metrics_collector_conftest.py  test_metrics_collector_standalone.py  test_metrics_header.py  test_metrics_pandas.py  test_metrics_writer.py  test_settings.py  test_storage.py  test_template.py  test_template_manager.py  test_template_manager_standalone.py  test_template_standalone.py  test_text_editor_extended.py  test_types.py  test_utils.py
