[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "write-a-book"
version = "0.1.0"
description = "Project management dashboard with GitHub integration"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cursor AI", email = "support@cursor.so"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "coverage>=7.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "streamlit>=1.31.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.3",
    "black>=24.1.1",
    "mypy>=1.8.0",
    "types-psutil>=5.9.5",
    "types-requests>=2.31.0.20240125",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # wrong-hanging-indentation
    "C0326",  # bad-whitespace
    "W0511",  # fixme
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true