[metadata]
name = write-a-book
version = 0.1.0
description = Project management dashboard with GitHub integration
author = Cursor AI
author_email = support@cursor.so
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    psutil>=5.9.0
    requests>=2.31.0
    coverage>=7.4.0
    pytest>=7.4.0
    pytest-cov>=4.1.0
    streamlit>=1.31.0

[options.extras_require]
dev =
    pylint>=3.0.3
    black>=24.1.1
    mypy>=1.8.0
    types-psutil>=5.9.5
    types-requests>=2.31.0.20240125

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --cov=core_scripts --cov-report=term-missing --no-cov-on-fail

[coverage:run]
source = core_scripts
branch = true
omit =
    tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError 